--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -1,15 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PyTask</title>
+    <link href="{% static 'css/daisyui.min.css' %}" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://unpkg.com/htmx.org@2.0.4" ></script>
   </head>
   <body>
-    <header class="bg-gray-800 text-white p-4">
-      <nav>Logo</nav>
-    </header>
-    {% block content %} {% endblock content %}
+    {% include "./partails/header.html" %}
+    <main class="py-5 px-10">
+      {% block content %} {% endblock content %}
+    </main>
+    
   </body>
 </html>
