--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PyTask</title>
     <link href="{% static 'css/daisyui.min.css' %}" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script src="https://unpkg.com/htmx.org@2.0.4" ></script>
+    <script src="{% static 'js/tailwindcss.min.js' %}"></script>
+    <script src="{% static 'js/htmx.min.js' %}" ></script>
   </head>
   <body>
     {% include "./partails/header.html" %}
