create loading before submiting

--- a/templates/views/home/components/task-delete-modal.html
+++ b/templates/views/home/components/task-delete-modal.html
@@ -1,27 +1,46 @@
 <dialog id="task_delete_modal_{{task.id}}" class="modal p-0">
-    <div class="modal-backdrop w-full h-screen fixed" onclick="onCloseModal({{task.id}})"></div>  
-    <div class="modal-box p-0">
-        <div role="alert" class="alert sm:alert-horizontal py-5">
-          
-            <span class="p-3 rounded-lg bg-red-50">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-red-500 size-5">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                </svg>
-                                
-            </span>
-            <div>
-                <h3 class="font-bold">Confirm delete task</h3>
-                <div class="text-xs">Are you sure to delete this task</div>
-              </div>
-            <div>
-                <button class="btn btn-sm" onclick="onCloseModal({{task.id}})">Deny</button>
-                <button 
-                    hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                    hx-delete="{% url 'task-delete' task.id %}"
-                    hx-target="#task-{{ task.id }}"
-                    hx-swap="outerHTML"
-                class="btn btn-sm border-emerald-500 bg-emerald-500 hover:bg-emerald-500/75 text-white">Accept</button>
-            </div>
-            </div>
+  <div
+    class="modal-backdrop w-full h-screen fixed"
+    onclick="onCloseModal(`{{task.id}}`)"
+  ></div>
+  <div class="modal-box p-0">
+    <div role="alert" class="alert sm:alert-horizontal py-5">
+      <span class="p-3 rounded-lg bg-red-50">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="text-red-500 size-5"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
+          />
+        </svg>
+      </span>
+      <div>
+        <h3 class="font-bold">Confirm delete task</h3>
+        <div class="text-xs">Are you sure to delete this task</div>
       </div>
-  </dialog>
+      <div>
+        <button class="btn btn-sm" onclick="onCloseModal(`{{task.id}}`)">
+          Deny
+        </button>
+        <button
+          hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+          hx-delete="{% url 'task-delete' task.id %}"
+          hx-target="#task-{{ task.id }}"
+          hx-on::before-request="document.getElementById('delete-text').textContent = 'Deleting...'"
+          hx-swap="outerHTML"
+
+          class="btn btn-sm border-emerald-500 bg-emerald-500 hover:bg-emerald-500/75 text-white"
+        >
+          <span id="delete-text">Accept</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</dialog>
