--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -4,16 +4,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="htmx-config" content='{"includeIndicatorStyles": false}'>
     <title>PyTask</title>
-    <link href="{% static 'css/daisyui.min.css' %}" rel="stylesheet" type="text/css" />
+    <link
+      href="{% static 'css/daisyui.min.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
+        <link rel="stylesheet"
+      type="text/css" href="{% static 'css/app.css' %}" />
     <script src="{% static 'js/tailwindcss.min.js' %}"></script>
-    <script src="{% static 'js/htmx.min.js' %}" ></script>
+    <script src="{% static 'js/htmx.min.js' %}"></script>
+
+
   </head>
-  <body>
+  <body >
     {% include "./partails/header.html" %}
-    <main class="py-5 px-10">
+    <main class="mt-5 py-5 px-5 lg:px-25">
       {% block content %} {% endblock content %}
     </main>
-    
   </body>
 </html>
