--- a/templates/views/home/components/task-create-modal.html
+++ b/templates/views/home/components/task-create-modal.html
@@ -1,40 +1,65 @@
 <dialog id="task_create_modal" class="modal">
-  <div class="modal-backdrop w-full h-screen fixed" onclick="task_create_modal.close();"></div>  
+  <div
+    class="modal-backdrop w-full h-screen fixed"
+    onclick="task_create_modal.close();"
+  ></div>
   <div class="modal-box">
-        <h3 class="font-bold text-lg mb-4">Add new task</h3>
-        <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2" onclick="task_create_modal.close()">✕</button>
-        
-        <form hx-post="{% url 'create-task' %}" 
-        hx-target="#task-list" 
-        hx-swap="afterbegin"
-        hx-on:success="task_create_modal.close(); this.reset();"
-        class="space-y-3 w-full ">
-            {% csrf_token %}
-            <div class="form-control w-full">
-              <label class="label mb-2">
-                <span class="label-text">Title</span>
-              </label>
-              {{form.title}}
-            </div>
-      
-            <div class="form-control w-full">
-              <label class="label mb-2">
-                <span class="label-text">Desc</span>
-              </label>
-              {{form.desc}}
-            </div>
-      
-            <div class="form-control w-full">
-              <label class="label mb-2">
-                <span class="label-text">Status</span>
-              </label>
-              {{form.status}}
-            </div>
-      
-            <div class="modal-action">
-              <button type="button" class="btn px-8 " onclick="task_create_modal.close()">Close</button>
-              <button type="submit" class="btn px-8 text-white border-emerald-500 bg-emerald-500 hover:bg-emerald-500/75">Save</button>
-            </div>
-          </form>
-    </div>
+    <h3 class="font-bold text-lg mb-4">Add new task</h3>
+    <button
+      class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2"
+      onclick="task_create_modal.close()"
+    >
+      ✕
+    </button>
+
+    <form
+      hx-post="{% url 'create-task' %}"
+      hx-target="#task-list"
+      hx-swap="afterbegin"
+      hx-on::before-request="document.getElementById('submit-text').textContent = 'Saving...'"
+      hx-on:success="task_create_modal.close(); this.reset(); document.getElementById('submit-text').textContent = 'Save';"
+      hx-indicator="#create-loading"
+      class="space-y-3 w-full"
+    >
+      {% csrf_token %}
+      <div class="form-control w-full">
+        <label class="label mb-2">
+          <span class="label-text">Title</span>
+        </label>
+        {{form.title}}
+      </div>
+
+      <div class="form-control w-full">
+        <label class="label mb-2">
+          <span class="label-text">Desc</span>
+        </label>
+        {{form.desc}}
+      </div>
+
+      <div class="form-control w-full">
+        <label class="label mb-2">
+          <span class="label-text">Status</span>
+        </label>
+        {{form.status}}
+      </div>
+
+      <div class="modal-action">
+        <button
+          type="button"
+          class="btn px-8"
+          onclick="task_create_modal.close()"
+        >
+          Close
+        </button>
+        <button
+          type="submit"
+          class="btn px-8 text-white border-emerald-500 bg-emerald-500 hover:bg-emerald-500/75 flex items-center space-x-2"
+        >
+          <span id="submit-text">Save</span>
+        </button>
+
+      </div>
+    </form>
+  </div>
+
 </dialog>
