--- a/templates/views/home/index.html
+++ b/templates/views/home/index.html
@@ -35,7 +35,7 @@
   </div>
   
   {% include "./components/task-list.html" %}
-
+  {% include './components/task-update-modal.html' %}
 </div>
 
 <script>
