--- a/templates/views/home/components/task-update-modal.html
+++ b/templates/views/home/components/task-update-modal.html
@@ -4,7 +4,7 @@
       onclick="task_update_modal.close();"
     ></div>
     <div  class="modal-box">
-      <h3 class="font-bold text-lg mb-4">Edit exsting task</h3>
+      <h3 class="font-bold text-lg mb-4">Edit existing task</h3>
       <button
         class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2"
         onclick="task_update_modal.close()"
